# AppFramework

include/: App.hpp  ConsoleControl.hpp  ConsoleView.hpp  Consts.hpp  Control.hpp  Conversion.hpp  CursesHelper.hpp  DOMXMLParser.hpp  GraphicalControl.hpp  GraphicalView.hpp  LazyStringCircularBuffer.hpp  Model.hpp  Object.hpp  StringHelper.hpp  Trace.hpp  View.hpp  XMLModel.hpp  XMLParser.hpp  iAppXML.hpp  iConsoleXML.hpp  iProjectXML.hpp  iWindowXML.hpp
src/: App.cpp  ConsoleControl.cpp  ConsoleView.cpp  Conversion.cpp  CursesHelper.cpp  DOMXMLParser.cpp  GraphicalControl.cpp  GraphicalView.cpp  LazyStringCircularBuffer.cpp  Model.cpp  StringHelper.cpp  Trace.cpp  View.cpp  XMLModel.cpp
unittest/: CMakeLists.txt  DOMXMLParserTest.cpp  DOMXMLParserTest.hpp
unittest/tmp/: CMakeCache.txt  FrameworkTests  Makefile  cmake_install.cmake
